# web_group_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deployment.yml
app/: alembic.ini  cli.py  db.py  main.py  settings.py
app/migrations/: env.py
app/migrations/versions/: 12ef70b9f007_update_tags_length.py  39ef9d9affaf_role_fix.py  4bad20885194_init.py  5909a89af835_fix_banned.py  62a5f9bdc329_збільшення_довжини_для_title_в_photo.py  7ceaca636613_init.py  7dba1d2d6d63_init.py  a437fdb36a2c_init.py  ab1b990bb806_role.py  b3e1c5d94965_try_fix_1.py  df2af4b26bfb_add_banned.py
app/services/: auth.py  redis.py
comments/: controllers.py  dependencies.py  models.py  routers.py  schemas.py  seed.py
photos/: Cloudinary_controller.py  controllers.py  models.py  routers.py  schemas.py  seed.py
tests/: conftest.py  test_users_routers.py
tests/photos/: test_routes_photos.py
tests/users/: test_users_routers.py
users/: controllers.py  models.py  routers.py  schemas.py  seed.py
