[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
faker = "^24.3.0"
python-dotenv = "^1.0.1"
typer = "^0.9.0"
uvicorn = {extras = ["extras"], version = "^0.29.0"}
python-multipart = "^0.0.9"
redis = "^5.0.3"
aiofiles = "^23.2.1"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
cloudinary = "^1.39.1"
httpx = "^0.27.0"
requests = "^2.31.0"
qrcode = "^7.4.2"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
